k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec: 
      containers:
      - name: backend-container
        image: tahmed2026/goals-backend:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip 
spec: 
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
