k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: tahmed2026/goals-project-frontend:phase4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip 
spec:
  type: ClusterIP 
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
