k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  selector:
    matchLabels:
      app: server
  template: 
    metadata:
      labels:
        app: server
    spec: 
      containers:
      - name: server
        image: tahmed2026/class-backend:0.1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip
spec:
  selector:
    app: server
  ports:
  - port: 5000
    targetPort: 5000
