k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations: 
    nginx-ingress.kubernetes.io/use-regex: 'true' 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-clusterip
                port:
                  number: 5000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-clusterip
                port:
                  number: 3000
